--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="des">
         <img src="https://hackersarcade.tech/assets/images/team/pyrus.jpg" class="img-fluid round"> <br>
         <h1>Aditya Dindi</h1> <br>
-        <small class="text-muted lead">Security Researcher at <a href="https://hackersarcade.tech/">Hackers Arcade</a></small> <br>
+        <small class="text-muted lead"><strong>Security Researcher at <a href="https://hackersarcade.tech/">Hackers Arcade</strong></a></small> <br>
         <p class="lead">I am a Cyber Security Student. I love reading mystery books 🕵️ and also watch Anime.</p>
       </div>
       <hr>
