--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
         <small class="text-muted lead"><strong>Security Researcher at <a href="https://hackersarcade.tech/" target="_blank">Hackers Arcade</strong></a></small> <br>
         <p class="lead">I am a Cyber Security Student. I love reading mystery books 🕵️ and also watch Anime.</p>
       </div>
-      <br>
+      <footer>
+        <div class="container animated animatedFadeInUp fadeInUp">
+          <br>
           <div class="row">
             <div class="col">
               <div class="social text-start">
@@ -62,6 +64,8 @@
             </div>
             </div>
             <br>
+          </div>
+        </footer>
       <hr>
       <h1 id="work-exp">PROJECTS</h1> <br>
       <p class="lead">Cyber Securty Homelab</p>
