--- a/index.html
+++ b/index.html
@@ -45,6 +45,25 @@
         <small class="text-muted lead"><strong>Security Researcher at <a href="https://hackersarcade.tech/" target="_blank">Hackers Arcade</strong></a></small> <br>
         <p class="lead">I am a Cyber Security Student. I love reading mystery books 🕵️ and also watch Anime.</p>
       </div> 
+      <div class="container animated animatedFadeInUp fadeInUp">
+          <br>
+          <div class="row">
+            <div class="col">
+              <div class="social text-start">
+              
+              <a href="https://instagram.com/hackersarcade" target="_blank"><i class="fab fa-instagram fa-lg"></i></a>
+              <a href="mailto:hackersarcade@protonmail.com"><i class="far fa-envelope fa-lg"></i></a>
+              <a href="https://discord.gg/nXDRcFe" target="_blank"><i class="fab fa-discord fa-lg"></i></a>
+              <a href="https://twitter.com/hackersarcade" target="_blank"><i class="fab fa-twitter fa-lg"></i></a>
+              
+              </div>
+            </div>
+            <div class="col text-white text-end">
+              <small>Copyright © 2021 Hackers Arcade</small>
+            </div>
+            </div>
+            <br>
+      </div>
       <hr>
       <h1 id="work-exp">PROJECTS</h1> <br>
       <p class="lead">Cyber Securty Homelab</p>
@@ -64,7 +83,7 @@
       <br>
       <hr>
       <br>
-      <p>© Aditya Dindi 2021</p>
+      <p>Copyright © 2021 Aditya Dindi</p>
 
     </div>
   </center>
