--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
     <title>Aditya's Personal Site</title>
-    <link rel="icon" href="img/detective.png">
+    <link rel="icon" href="img/images.jpg">
   </head>
   <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
