--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
           <li class="nav-item">
             <a class="nav-link" href="#skills">SKILLS</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#resume">SKILLS</a>
+          </li>
         </ul>
       </div>
     </div>
