--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <a class="nav-link" href="#skills">SKILLS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#resume">SKILLS</a>
+            <a class="nav-link" href="/WebPages/AdityaDindiResume.pdf">RESUME</a>
           </li>
         </ul>
       </div>
