--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
       <hr>
       <br>
       <h1 id="projects">WORK EXPERIENCE</h1> <br>
-      <p class="lead">(2021 - 2021) Security Researcher at Hackers Arcade</p>
-      <p class="lead">(2019 - 2020) Data Center Technician</p>
+      <p class="lead" style="color:red"><strong>(2021 - 2021) Security Researcher at Hackers Arcade</strong></p>
+      <p class="lead" style="color:green">(2019 - 2020) Data Center Technician</p>
       <br>
       <hr>
       <br>
