--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <br>
       <hr>
       <br>
-      <h1 id="projects">WORK EXPERIENCE</h1> <br>
+      <h1 id="projects" style="color:blue">WORK EXPERIENCE</h1> <br>
       <p class="lead" style="color:red"><strong>(2021 - 2021) Security Researcher at Hackers Arcade</strong></p>
       <p class="lead" style="color:green"><strong>(2019 - 2020) Data Center Technician</strong></p>
       <br>
