--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <br>
       <h1 id="projects" style="color:DodgerBlue">WORK EXPERIENCE</h1> <br>
       <p class="lead" style="color:red"><strong>(2021 - 2021) Security Researcher at Hackers Arcade</strong></p>
-      <p class="lead" style="color:green"><b>(2019 - 2020) Data Center Technician</b></p>
+      <p class="lead" style="color:MediumSeaGreen"><b>(2019 - 2020) Data Center Technician</b></p>
       <br>
       <hr>
       <br>
