--- a/index.html
+++ b/index.html
@@ -58,9 +58,10 @@
       <br>
       <h1 id="projects" style="color:DodgerBlue">WORK EXPERIENCE</h1> <br>
       <p class="lead" style="color:red"><strong>(2021 - 2021) Security Researcher at Hackers Arcade</strong></p>
-      <p>Hackers Arcade is an online platform where you can learn about cyber security through excellent learning resources and challenges. It also
-involves security research and working on different projects that helps advance the cyber security community. Hackers Arcade contributed and
-is consistently contributing to the cybersecurity community by constantly teaching and uploading cybersecurity related content.</p>
+      <p>
+        Hackers Arcade is an online platform where you can learn about cyber security through excellent learning resources and challenges. It also involves security research and working on different projects that helps advance the cyber security community. Hackers Arcade contributed and
+        is consistently contributing to the cybersecurity community by constantly teaching and uploading cybersecurity related content.
+      </p>
       <p class="lead" style="color:MediumSeaGreen"><strong>(2019 - 2020) Data Center Technician</strong></p>
       <br>
       <hr>
