--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
         Hackers Arcade contributed and is consistently contributing to the cybersecurity community by constantly teaching and uploading cybersecurity related content.
       </p>
       <p class="lead" style="color:MediumSeaGreen"><strong>(2019 - 2020) Data Center Technician</strong></p>
+      <p>
+        Monitored the server center and constantly updated, fixed, maintained and patched technology within the data center. Fixed and maintained all
+        school computers on a weekly basis. Helped keep all computer systems in the school available with little to no downtime.
+      </p>
       <br>
       <hr>
       <br>
