--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
           <li class="nav-item">
             <a class="nav-link" href="/WebPages/AdityaDindiResume.pdf" target="_blank">RESUME</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/WebPages/activities.html">Activities and Interests</a>
+          </li>
         </ul>
       </div>
     </div>
