--- a/WebPages/activities.html
+++ b/WebPages/activities.html
@@ -37,7 +37,7 @@
             <a class="nav-link" href="/WebPages/AdityaDindiResume.pdf" target="_blank">RESUME</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="">Activities and Interests</a>
+            <a class="nav-link" href="/WebPages/activities.html" target="_blank">Activities and Interests</a>
           </li>
         </ul>
       </div>
