--- a/WebPages/activities.html
+++ b/WebPages/activities.html
@@ -45,35 +45,34 @@
     <div class="container text-white">
       <div class="des">
         <img src="https://hackersarcade.tech/assets/images/team/pyrus.jpg" class="img-fluid round"> <br>
-        <h1>Aditya Dindi</h1> <br>
-        <small class="text-muted lead"><strong>Security Researcher at <a href="https://hackersarcade.tech/" target="_blank">Hackers Arcade</strong></a></small> <br>
-        <p class="lead">I am a Cyber Security Student. I love reading mystery books 🕵️ and also watch Anime.</p>
+        <h1>Activities and Interests</h1> <br>
+        <! -- 
+        <small class="text-muted lead"><strong><a href="https://hackersarcade.tech/" target="_blank"></strong></a></small> <br>
+        <p class="lead">
+        </p>
+        -->
       </div> 
       <hr>
-      <h1 id="work-exp">PROJECTS</h1> <br>
-      <p class="lead">Cyber Securty Homelab</p>
-      <p class="lead">Web Application Hacking Guide</p>
+      <h1 id="tryhackme">TryHackMe</h1> <br>
+      <p class="lead">Rank: Top 1%</p>
+      <p class="lead">Certficates</p>
       <br>
       <hr>
       <br>
-      <h1 id="projects" style="color:DodgerBlue">WORK EXPERIENCE</h1> <br>
-      <p class="lead" style="color:red"><strong>(2021 - 2021) Security Researcher at Hackers Arcade</strong></p>
-      <p>
-        Hackers Arcade is an online platform where you can learn about cyber security through excellent learning resources and challenges. 
-        It also involves security research and working on different projects that helps advance the cyber security community. 
-        Hackers Arcade contributed and is consistently contributing to the cybersecurity community by constantly teaching and uploading cybersecurity related content.
+      <h1 id="projects" style="color:DodgerBlue"></h1> <br>
+      <p class="lead" style="color:red"><strong></strong>
       </p>
-      <p class="lead" style="color:MediumSeaGreen"><strong>(2019 - 2020) Data Center Technician</strong></p>
       <p>
-        Monitored the server center and constantly updated, fixed, maintained and patched technology within the data center. Fixed and maintained all
-        school computers on a weekly basis. Helped keep all computer systems in the school available with little to no downtime.
+      </p>
+      <p class="lead" style="color:MediumSeaGreen"><strong></strong></p>
+      <p>
       </p>
       <br>
       <hr>
       <br>
-      <h1 id="skills">MY SKILLS</h1> <br>
-      <p class="lead">Web Application Hacking</p>
-      <p class="lead">Network Hacking</p>
+      <h1 id="skills"></h1> <br>
+      <p class="lead"></p>
+      <p class="lead"></p>
       <br>
       <hr>
       <br>
