--- a/WebPages/activities.html
+++ b/WebPages/activities.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="/css/style.css">
 
     <title>Aditya's Personal Site</title>
-    <link rel="icon" href="img/detective.png">
+    <link rel="icon" href="/img/detective.png">
   </head>
   <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -44,7 +44,7 @@
   <center>
     <div class="container text-white">
       <div class="des">
-        <img src="img/Kudo-Shinichi-modified (1).png" class="img-fluid round"> <br>
+        <img src="/img/Kudo-Shinichi-modified (1).png" class="img-fluid round"> <br>
         <h1>Activities and Interests</h1> <br>
         <!-- 
         <small class="text-muted lead"><strong><a href="https://hackersarcade.tech/" target="_blank"></strong></a></small> <br>
