--- a/WebPages/activities.html
+++ b/WebPages/activities.html
@@ -36,7 +36,7 @@
           </li>
           -->
           <li class="nav-item">
-            <a class="nav-link" href="/WebPages/activities.html" target="_blank">Activities and Interests</a>
+            <a class="nav-link" href="/WebPages/activities.html">Activities and Interests</a>
           </li>
         </ul>
       </div>
