--- a/index.html
+++ b/index.html
@@ -34,11 +34,13 @@
             <a class="nav-link" href="#skills">SKILLS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/WebPages/AdityaDindiResume.pdf" target="_blank">RESUME</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" href="/WebPages/activities.html" target="_blank">ACTIVITIES AND INTERESTS</a>
           </li>
+       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="projects/">DOWNLOAD RESUME</a>
+            </li>
         </ul>
       </div>
     </div>
