--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
           <li class="nav-item">
             <a class="nav-link" href="/WebPages/activities.html" target="_blank">ACTIVITIES AND INTERESTS</a>
           </li>
-       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="projects/">DOWNLOAD RESUME</a>
-            </li>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="/WebPages/AdityaDindiResume/">DOWNLOAD RESUME</a>
+          </li>
         </ul>
-      </div>
+     </div>
     </div>
   </nav>
   <br>
