--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="/WebPages/AdityaDindiResume/">DOWNLOAD RESUME</a>
+            <a class="nav-link" href="/WebPages/AdityaDindiResume.pdf">DOWNLOAD RESUME</a>
           </li>
         </ul>
      </div>
