--- a/WebPages/activities.html
+++ b/WebPages/activities.html
@@ -46,7 +46,7 @@
   <center>
     <div class="container text-white">
       <div class="des">
-        <img src="/img/Kudo-Shinichi-modified (1).png" class="img-fluid round"> <br>
+        <img src="/img/pyrus.jpg" class="img-fluid round"> <br>
         <h1>Activities and Interests</h1> <br>
         <!-- 
         <small class="text-muted lead"><strong><a href="https://hackersarcade.tech/" target="_blank"></strong></a></small> <br>
