--- a/WebPages/activities.html
+++ b/WebPages/activities.html
@@ -58,6 +58,9 @@
       <h1 id="tryhackme">TryHackMe</h1> <br>
       <p class="lead">Rank: Top 1%</p>
       <p class="lead">Certficates</p>
+      <img src="/img/THM-PreSecurity.png" alt="Pre-Security" width="800" height="500">
+      <img src="/img/THM-WebFundamentals.png" alt="Web-Fundamentals" width="800" height="500">
+      <img src="/img/THM-AdventOfCyber.png" alt="Advent-Of-Cyber" width="800" height="500">
       <br>
       <hr>
       <br>
