--- a/index.html
+++ b/index.html
@@ -36,14 +36,16 @@
           <li class="nav-item">
             <a class="nav-link" href="/WebPages/activities.html" target="_blank">ACTIVITIES AND INTERESTS</a>
           </li>
+      </div>
+      <!--
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="/WebPages/AdityaDindiResume.pdf">DOWNLOAD RESUME</a>
-          </li>
-        </ul>
-     </div>
-    </div>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="/WebPages/AdityaDindiResume.pdf">DOWNLOAD RESUME</a>
+        </li>
+      </ul>
+      </div>
+      -->
   </nav>
   <br>
   <center>
@@ -53,6 +55,7 @@
         <h1>Aditya Dindi</h1> <br>
         <small class="text-muted lead"><strong>Security Researcher at <a href="https://hackersarcade.tech/" target="_blank">Hackers Arcade</strong></a></small> <br>
         <p class="lead">I am a Cyber Security Student. I love reading mystery books 🕵️ and also watch Anime.</p>
+        <a class="btn btn-outline-light" role="button" href="WebPages/AdityaDindiResume.pdf">MY RESUME</a></a>
       </div> 
       <hr>
       <h1 id="work-exp">PROJECTS</h1> <br>
