--- a/WebPages/activities.html
+++ b/WebPages/activities.html
@@ -56,8 +56,9 @@
       </div> 
       <hr>
       <h1 id="tryhackme">TryHackMe</h1> <br>
-      <p class="lead">Rank: Top 1%</p>
-      <p class="lead">Certficates</p>
+      <h2 id="tryhackme">Profile</h2> <br>
+      <img src="/img/THM-Rank.png" alt="THM-Ranks" width="1400" height="400">
+      <h2 id="tryhackme">Certificates</h2>
       <img src="/img/THM-PreSecurity.png" alt="Pre-Security" width="800" height="500">
       <img src="/img/THM-WebFundamentals.png" alt="Web-Fundamentals" width="800" height="500">
       <img src="/img/THM-AdventOfCyber.png" alt="Advent-Of-Cyber" width="800" height="500">
