--- a/WebPages/activities.html
+++ b/WebPages/activities.html
@@ -15,7 +15,7 @@
   <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-      <a class="navbar-brand" href="/">🔍</a>
+      <a class="navbar-brand" href="/index.html">H🔍ME</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -34,10 +34,10 @@
           <li class="nav-item">
             <a class="nav-link" href="/WebPages/AdityaDindiResume.pdf" target="_blank">RESUME</a>
           </li>
-          -->
           <li class="nav-item">
             <a class="nav-link" href="/WebPages/activities.html">Activities and Interests</a>
           </li>
+          -->
         </ul>
       </div>
     </div>
@@ -47,7 +47,7 @@
     <div class="container text-white">
       <div class="des">
         <img src="/img/pyrus.jpg" class="img-fluid round"> <br>
-        <h1>Activities and Interests</h1> <br>
+        <h1>Activities / Interests</h1> <br>
         <!-- 
         <small class="text-muted lead"><strong><a href="https://hackersarcade.tech/" target="_blank"></strong></a></small> <br>
         <p class="lead">
