--- a/index.html
+++ b/index.html
@@ -15,15 +15,17 @@
   <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-      <a class="navbar-brand" href="/">🔍</a>
+      <a class="navbar-brand" href="/">H🔍ME</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
         <ul class="navbar-nav">
-         <li class="nav-item">
+          <!--
+          <li class="nav-item">
             <a class="nav-link active" href="/">HOME</a>
           </li>
+          -->
           <li class="nav-item">
             <a class="nav-link" href="#projects">PROJECTS</a>
           </li>
@@ -34,7 +36,7 @@
             <a class="nav-link" href="#skills">SKILLS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/WebPages/activities.html" target="_blank">ACTIVITIES AND INTERESTS</a>
+            <a class="nav-link" href="/WebPages/activities.html" target="_blank">ACTIVITIES / INTERESTS</a>
           </li>
     </div>
   </nav>
