New Folder: Writeups

--- a/WebPages/activities.html
+++ b/WebPages/activities.html
@@ -57,12 +57,12 @@
       <hr>
       <h1 id="tryhackme">TryHackMe</h1> <br>
       <h2 id="tryhackme">Profile</h2> <br>
-      <img src="/img/THM-Rank.png" alt="THM-Ranks" width="1400" height="400">
-      <h2 id="tryhackme">Certificates</h2>
-      <img src="/img/THM-PreSecurity.png" alt="Pre-Security" width="800" height="500">
-      <img src="/img/THM-WebFundamentals.png" alt="Web-Fundamentals" width="800" height="500">
-      <img src="/img/THM-AdventOfCyber.png" alt="Advent-Of-Cyber" width="800" height="500">
+      <img src="/img/THM-Rank.png" alt="THM-Ranks" width="1400" height="400"> 
       <br>
+      <h2 id="tryhackme">Certificates</h2> <br>
+      <img src="/img/THM-PreSecurity.png" alt="Pre-Security" width="600" height="300"> 
+      <img src="/img/THM-WebFundamentals.png" alt="Web-Fundamentals" width="600" height="300"> 
+      <img src="/img/THM-AdventOfCyber.png" alt="Advent-Of-Cyber" width="600" height="300"> 
       <hr>
       <br>
       <h1 id="projects" style="color:DodgerBlue"></h1> <br>
