--- a/index.html
+++ b/index.html
@@ -21,11 +21,9 @@
       </button>
       <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
         <ul class="navbar-nav">
-          <!--
           <li class="nav-item">
-            <a class="nav-link active" href="/">HOME</a>
+            <a class="nav-link active" href="/">WRITEUPS</a>
           </li>
-          -->
           <li class="nav-item">
             <a class="nav-link" href="#projects">PROJECTS</a>
           </li>
@@ -34,10 +32,12 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#skills">SKILLS</a>
+        <!--
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/WebPages/activities.html" target="_blank">ACTIVITIES / INTERESTS</a>
           </li>
+        -->
     </div>
   </nav>
   <br>
