--- a/index.html
+++ b/index.html
@@ -22,9 +22,6 @@
       <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" href="/">WRITEUPS</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" href="#projects">PROJECTS</a>
           </li>
           <li class="nav-item">
@@ -32,12 +29,10 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#skills">SKILLS</a>
-        <!--
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/WebPages/activities.html" target="_blank">ACTIVITIES / INTERESTS</a>
           </li>
-        -->
     </div>
   </nav>
   <br>
@@ -53,7 +48,8 @@
       <hr>
       <h1 id="work-exp">PROJECTS</h1> <br>
       <p class="lead">Cyber Securty Homelab</p>
-      <p class="lead">Web Application Hacking Guide</p>
+      <small class="text-muted lead"><strong><a href="https://hackersarcade.medium.com/noobs-guide-to-web-application-penetration-testing-e3ae921d57d1" class="text-decoration-none" target="_blank">Web Application Hacking Guide</strong></a></small> <br><br>
+      <small class="text-muted lead"><strong><a href="/" class="text-decoration-none" target="_blank">Personal Website</strong></a></small>
       <br>
       <hr>
       <br>
