utsa-cyber-range

--- a/WebPages/activities.html
+++ b/WebPages/activities.html
@@ -25,7 +25,7 @@
             <a class="nav-link" href="#tryhackme">TryHackMe</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#capture-the-flag">Capture The Flag</a>
+            <a class="nav-link" href="#utsa-cyber-range">UTSA Cyber Range</a>
           </li>
           <!--
           <li class="nav-item">
@@ -48,30 +48,32 @@
       <div class="des">
         <img src="/img/pyrus.jpg" class="img-fluid round"> <br>
         <h1>Activities / Interests</h1> <br>
-        <!-- 
-        <small class="text-muted lead"><strong><a href="https://hackersarcade.tech/" target="_blank"></strong></a></small> <br>
-        <p class="lead">
-        </p>
-        -->
       </div> 
       <hr>
-      <h1 id="tryhackme">TryHackMe</h1> <br>
+      <h1 id="tryhackme" style="color:DodgerBlue">TryHackMe</h1><br>
       <h2 id="tryhackme">Profile</h2> <br>
-      <img src="/img/THM-Rank.png" alt="THM-Ranks" width="1400" height="400"> 
+      <img src="/img/THM-Rank.png" alt="THM-Ranks" width="1400" height="400"> <br>
       <br>
       <h2 id="tryhackme">Certificates</h2> <br>
       <img src="/img/THM-PreSecurity.png" alt="Pre-Security" width="600" height="300"> 
       <img src="/img/THM-WebFundamentals.png" alt="Web-Fundamentals" width="600" height="300"> 
-      <img src="/img/THM-AdventOfCyber.png" alt="Advent-Of-Cyber" width="600" height="300"> 
-      <hr>
+      <img src="/img/THM-AdventOfCyber.png" alt="Advent-Of-Cyber" width="600" height="300"> <br>
       <br>
-      <h1 id="projects" style="color:DodgerBlue"></h1> <br>
-      <p class="lead" style="color:red"><strong></strong>
+      <hr>
+      <h1 id="utsa-cyber-range" style="color:DodgerBlue">UTSA Cyber Range </h1><br>
+      <p>
+        <strong> Read-World </strong> Network <br>
+        <strong> Real-World </strong> Security tools <br>
+        <strong> Real-World </strong> Simulated Attacks <br>
+      </p>
+      <img src="/img/Cyber-Range-Network.png" alt="Cyber-Range-Network"> 
+      <br>
+      <br>
+      <p>
+        The UTSA Cyber Rnage is a virtualized corporate netework with over 60 components including application, database and email servers, as well as workstations and simulated internet segment. The virtual SOC (Security Operation Center) features market-leading security products to provide hands-on experience with the same tools cyher security analysts use on job. 
       </p>
       <p>
-      </p>
-      <p class="lead" style="color:MediumSeaGreen"><strong></strong></p>
-      <p>
+        Copyright © 2021 The University of Texas at San Antonio | One UTSA Circle San Antonio, TX 78249 | Information: (210) 458-4011
       </p>
       <br>
       <hr>
@@ -80,7 +82,7 @@
       <p class="lead"></p>
       <p class="lead"></p>
       <br>
-      <hr>
+
       <br>
       <p>Copyright © 2021 Aditya Dindi</p>
 
