--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
       </div> 
       <hr>
       <h1 id="work-exp">PROJECTS</h1> <br>
-      <p class="lead">Cyber Securty Homelab</p>
+      <small class="text-muted lead"><strong><a href="/" class="text-decoration-none" target="_blank">Cyber Security Homelab</strong></a></small> <br><br>
       <small class="text-muted lead"><strong><a href="https://hackersarcade.medium.com/noobs-guide-to-web-application-penetration-testing-e3ae921d57d1" class="text-decoration-none" target="_blank">Web Application Hacking Guide</strong></a></small> <br><br>
       <small class="text-muted lead"><strong><a href="/" class="text-decoration-none" target="_blank">Personal Website</strong></a></small>
       <br>
       <hr>
       <br>
       <h1 id="projects" style="color:DodgerBlue">WORK EXPERIENCE</h1> <br>
-      <p class="lead" style="color:red"><strong>(2021 - 2021) Security Researcher at Hackers Arcade</strong></p>
+      <p class="lead" style="color:red"><strong>(2021 - Current) Security Researcher at Hackers Arcade</strong></p>
       <p>
         Hackers Arcade is an online platform where you can learn about cyber security through excellent learning resources and challenges. 
         It also involves security research and working on different projects that helps advance the cyber security community. 
