--- a/WebPages/activities.html
+++ b/WebPages/activities.html
@@ -22,6 +22,9 @@
       <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
+            <a class="nav-link" href="/Writeups/tryhackme.html">Writeups</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="#tryhackme">TryHackMe</a>
           </li>
           <li class="nav-item">
