--- a/Writeups/tryhackme.html
+++ b/Writeups/tryhackme.html
@@ -24,9 +24,6 @@
           <li class="nav-item">
             <a class="nav-link" href="#tryhackme">TryHackMe</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#utsa-cyber-range">UTSA Cyber Range</a>
-          </li>
         </ul>
       </div>
     </div>
@@ -40,22 +37,14 @@
       </div> 
       <hr>
       <h1 id="tryhackme" style="color:DodgerBlue">TryHackMe</h1><br>
-      <h2 id="tryhackme">Profile</h2> <br>
-      <img src="/img/THM-Rank.png" alt="THM-Ranks" width="1400" height="400"> <br>
-      <br>
-      <h2 id="tryhackme">Certificates</h2> <br>
-      <img src="/img/THM-PreSecurity.png" alt="Pre-Security" width="600" height="300"> 
-      <img src="/img/THM-WebFundamentals.png" alt="Web-Fundamentals" width="600" height="300"> 
-      <img src="/img/THM-AdventOfCyber.png" alt="Advent-Of-Cyber" width="600" height="300"> <br>
+      <h2 id="tryhackme">Easy Challenges</h2> <br>
+      <p></p>
+      <img src="/img/THM-PreSecurity.png" alt="Pre-Security" width="400" height="200"> 
+      <img src="/img/THM-WebFundamentals.png" alt="Web-Fundamentals" width="400" height="200"> 
+      <img src="/img/THM-AdventOfCyber.png" alt="Advent-Of-Cyber" width="400" height="200"> <br>
       <br>
       <hr>
-      <h1 id="utsa-cyber-range" style="color:DodgerBlue">UTSA Cyber Range </h1><br>
-      <p>
-        <strong> Read-World </strong> Network <br>
-        <strong> Real-World </strong> Security tools <br>
-        <strong> Real-World </strong> Simulated Attacks <br>
-      </p>
-      <img src="/img/Cyber-Range-Network.png" alt="Cyber-Range-Network"> 
+      <h1 id="utsa-cyber-range" style="color:DodgerBlue"></h1><br>
       <br>
       <br>
       <p>
