--- a/Writeups/tryhackme.html
+++ b/Writeups/tryhackme.html
@@ -38,29 +38,29 @@
       <hr>
       <h1 id="tryhackme" style="color:DodgerBlue">TryHackMe</h1><br>
       <h2 id="tryhackme">Easy Challenges</h2> <br>
-      <p></p>
-      <img src="/img/THM-PreSecurity.png" alt="Pre-Security" width="400" height="200"> 
-      <img src="/img/THM-WebFundamentals.png" alt="Web-Fundamentals" width="400" height="200"> 
-      <img src="/img/THM-AdventOfCyber.png" alt="Advent-Of-Cyber" width="400" height="200"> <br>
-      <br>
+      <a href="https://app.gitbook.com/@pyrusgaming/s/oscp-journey/tryhackme/untitled/simple-ctf"><strong>Simple CTF</strong></a><br><br>
+      <img src="/Writeups/img/simple-ctf.png" alt="Simple-CTF" width="625" height="137"> <br><br>
+      <a href="https://app.gitbook.com/@pyrusgaming/s/oscp-journey/tryhackme/untitled/basic-pentesting"><strong>Basic Pentesting</strong></a><br><br>
+      <img src="/Writeups/img/basic-pentesting.png" alt="Basic-Pentesting" width="625" height="137"><br><br>
+      <a href="https://app.gitbook.com/@pyrusgaming/s/oscp-journey/tryhackme/untitled/pickle-rick"><strong>Pickle Rick</strong></a><br><br>
+      <img src="/Writeups/img/pickle-rick.png" alt="Pickle-Rick"  width="625" height="137">
       <hr>
+      <a href="https://app.gitbook.com/@pyrusgaming/s/oscp-journey/tryhackme/untitled/simple-ctf"><strong>Simple CTF</strong></a>
+      <a href="https://app.gitbook.com/@pyrusgaming/s/oscp-journey/tryhackme/untitled/basic-pentesting"><strong>Basic Pentesting</strong></a><br>
+      <img src="/Writeups/img/simple-ctf.png" alt="Simple-CTF" width="625" height="137"> 
+      <img src="/Writeups/img/basic-pentesting.png" alt="Basic-Pentesting" width="625" height="137">
+      <a href="https://app.gitbook.com/@pyrusgaming/s/oscp-journey/tryhackme/untitled/pickle-rick"><strong>Pickle Rick</strong></a><br><br>
+      <img src="/Writeups/img/pickle-rick.png" alt="Pickle-Rick"  width="625" height="137">
+      <br>
       <h1 id="utsa-cyber-range" style="color:DodgerBlue"></h1><br>
       <br>
       <br>
-      <p>
-        The UTSA Cyber Rnage is a virtualized corporate netework with over 60 components including application, database and email servers, as well as workstations and simulated internet segment. The virtual SOC (Security Operation Center) features market-leading security products to provide hands-on experience with the same tools cyher security analysts use on job. 
-      </p>
-      <p>
-        Copyright © 2021 The University of Texas at San Antonio | One UTSA Circle San Antonio, TX 78249 | Information: (210) 458-4011
-      </p>
       <br>
-      <hr>
       <br>
       <h1 id="skills"></h1> <br>
       <p class="lead"></p>
       <p class="lead"></p>
       <br>
-
       <br>
       <p>Copyright © 2021 Aditya Dindi</p>
 
