--- a/Writeups/tryhackme.html
+++ b/Writeups/tryhackme.html
@@ -38,19 +38,13 @@
       <hr>
       <h1 id="tryhackme" style="color:DodgerBlue">TryHackMe</h1><br>
       <h2 id="tryhackme">Easy Challenges</h2> <br>
-      <a href="https://app.gitbook.com/@pyrusgaming/s/oscp-journey/tryhackme/untitled/simple-ctf"><strong>Simple CTF</strong></a><br><br>
-      <img src="/Writeups/img/simple-ctf.png" alt="Simple-CTF" width="625" height="137"> <br><br>
-      <a href="https://app.gitbook.com/@pyrusgaming/s/oscp-journey/tryhackme/untitled/basic-pentesting"><strong>Basic Pentesting</strong></a><br><br>
-      <img src="/Writeups/img/basic-pentesting.png" alt="Basic-Pentesting" width="625" height="137"><br><br>
-      <a href="https://app.gitbook.com/@pyrusgaming/s/oscp-journey/tryhackme/untitled/pickle-rick"><strong>Pickle Rick</strong></a><br><br>
-      <img src="/Writeups/img/pickle-rick.png" alt="Pickle-Rick"  width="625" height="137">
+      <a href="https://app.gitbook.com/@pyrusgaming/s/oscp-journey/tryhackme/untitled/simple-ctf"><p id="left"><strong>Simple CTF</strong></p></a><br>
+      <img src="/Writeups/img/simple-ctf.png" alt="Simple-CTF" width="625" height="137" align="left"><br>
+      <a href="https://app.gitbook.com/@pyrusgaming/s/oscp-journey/tryhackme/untitled/basic-pentesting"><p id="right"><strong>Basic Pentesting</strong></p></a><br>
+      <img src="/Writeups/img/basic-pentesting.png" alt="Basic-Pentesting" width="625" height="137" align="right"><br><br><br>
+      <a href="https://app.gitbook.com/@pyrusgaming/s/oscp-journey/tryhackme/untitled/pickle-rick"><p id="left"><strong>Pickle Rick</strong></p></a><br>
+      <img src="/Writeups/img/pickle-rick.png" alt="Pickle-Rick"  width="625" height="137" align="left"><br>
       <hr>
-      <a href="https://app.gitbook.com/@pyrusgaming/s/oscp-journey/tryhackme/untitled/simple-ctf"><strong>Simple CTF</strong></a>
-      <a href="https://app.gitbook.com/@pyrusgaming/s/oscp-journey/tryhackme/untitled/basic-pentesting"><strong>Basic Pentesting</strong></a><br>
-      <img src="/Writeups/img/simple-ctf.png" alt="Simple-CTF" width="625" height="137"> 
-      <img src="/Writeups/img/basic-pentesting.png" alt="Basic-Pentesting" width="625" height="137">
-      <a href="https://app.gitbook.com/@pyrusgaming/s/oscp-journey/tryhackme/untitled/pickle-rick"><strong>Pickle Rick</strong></a><br><br>
-      <img src="/Writeups/img/pickle-rick.png" alt="Pickle-Rick"  width="625" height="137">
       <br>
       <h1 id="utsa-cyber-range" style="color:DodgerBlue"></h1><br>
       <br>
