--- a/Writeups/tryhackme.html
+++ b/Writeups/tryhackme.html
@@ -33,7 +33,7 @@
     <div class="container text-white">
       <div class="des">
         <img src="/img/pyrus.jpg" class="img-fluid round"> <br>
-        <h1>Activities / Interests</h1> <br>
+        <h1>Writeups</h1> <br>
       </div> 
       <hr>
       <h1 id="tryhackme" style="color:DodgerBlue">TryHackMe</h1><br>
