--- a/Writeups/tryhackme.html
+++ b/Writeups/tryhackme.html
@@ -34,6 +34,9 @@
       <div class="des">
         <img src="/img/pyrus.jpg" class="img-fluid round"> <br>
         <h1>Writeups</h1> <br>
+        <p>These are writeups I did on security boxes available on the internet. It shows how I use cyber security industry tools such as Nmap, Gobuster, Hydra, Hashcat and others to break into these boxes. These writeups also show 
+            my writing skills and my methodology while I break these boxes. 
+        </p>
       </div> 
       <hr>
       <h1 id="tryhackme" style="color:DodgerBlue">TryHackMe</h1><br>
