--- a/Writeups/tryhackme.html
+++ b/Writeups/tryhackme.html
@@ -38,18 +38,23 @@
             my writing skills and my methodology while I break these boxes. 
         </p>
       </div> 
-      <hr>
+
       <h1 id="tryhackme" style="color:DodgerBlue">TryHackMe</h1><br>
       <h2 id="tryhackme">Easy Challenges</h2> <br>
-      <a href="https://app.gitbook.com/@pyrusgaming/s/oscp-journey/tryhackme/untitled/simple-ctf"><p id="left"><strong>Simple CTF</strong></p></a><br>
-      <img src="/Writeups/img/simple-ctf.png" alt="Simple-CTF" width="625" height="137" align="left"><br>
-      <a href="https://app.gitbook.com/@pyrusgaming/s/oscp-journey/tryhackme/untitled/basic-pentesting"><p id="right"><strong>Basic Pentesting</strong></p></a><br>
-      <img src="/Writeups/img/basic-pentesting.png" alt="Basic-Pentesting" width="625" height="137" align="right"><br><br><br>
-      <a href="https://app.gitbook.com/@pyrusgaming/s/oscp-journey/tryhackme/untitled/pickle-rick"><p id="left"><strong>Pickle Rick</strong></p></a><br>
-      <img src="/Writeups/img/pickle-rick.png" alt="Pickle-Rick"  width="625" height="137" align="left"><br>
-      <hr>
+      <a href="https://app.gitbook.com/@pyrusgaming/s/oscp-journey/tryhackme/untitled/simple-ctf">
+        <img alt="Simple CTF" src="/Writeups/img/simple-ctf.png" width="625" height="137" align="left"><br>
+      </a><br><br>
+      <a href="https://app.gitbook.com/@pyrusgaming/s/oscp-journey/tryhackme/untitled/basic-pentesting">
+        <img alt="Simple CTF" src="/Writeups/img/basic-pentesting.png" width="625" height="137" align="right"><br>
+      </a><br><br>
       <br>
-      <h1 id="utsa-cyber-range" style="color:DodgerBlue"></h1><br>
+      <a href="https://app.gitbook.com/@pyrusgaming/s/oscp-journey/tryhackme/untitled/pickle-rick">
+      <img alt="Simple CTF" src="/Writeups/img/pickle-rick.png" width="625" height="137" align="left"><br>
+      </a><br><br>
+      <a href="https://app.gitbook.com/@pyrusgaming/s/oscp-journey/tryhackme/untitled/pickle-rick">
+        <img alt="Simple CTF" src="/Writeups/img/pickle-rick.png" width="625" height="137" align="right"><br>
+      </a>
+      <br>
       <br>
       <br>
       <br>
