--- a/Writeups/tryhackme.html
+++ b/Writeups/tryhackme.html
@@ -24,6 +24,9 @@
           <li class="nav-item">
             <a class="nav-link" href="#tryhackme">TryHackMe</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#hackthebox">HackTheBox</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -41,27 +44,36 @@
 
       <h1 id="tryhackme" style="color:DodgerBlue">TryHackMe</h1><br>
       <h2 id="tryhackme">Easy Challenges</h2> <br>
-      <a href="https://app.gitbook.com/@pyrusgaming/s/oscp-journey/tryhackme/untitled/simple-ctf">
+      <a href="https://app.gitbook.com/@pyrusgaming/s/oscp-journey/tryhackme/untitled/simple-ctf" target="_blank">
         <img alt="Simple CTF" src="/Writeups/img/simple-ctf.png" width="625" height="137" align="left"><br>
       </a><br><br>
-      <a href="https://app.gitbook.com/@pyrusgaming/s/oscp-journey/tryhackme/untitled/basic-pentesting">
+      <a href="https://app.gitbook.com/@pyrusgaming/s/oscp-journey/tryhackme/untitled/basic-pentesting" target="_blank">
         <img alt="Simple CTF" src="/Writeups/img/basic-pentesting.png" width="625" height="137" align="right"><br>
       </a><br><br>
       <br>
-      <a href="https://app.gitbook.com/@pyrusgaming/s/oscp-journey/tryhackme/untitled/pickle-rick">
+      <a href="https://app.gitbook.com/@pyrusgaming/s/oscp-journey/tryhackme/untitled/pickle-rick" target="_blank">
       <img alt="Simple CTF" src="/Writeups/img/pickle-rick.png" width="625" height="137" align="left"><br>
       </a><br><br>
-      <a href="https://app.gitbook.com/@pyrusgaming/s/oscp-journey/tryhackme/untitled/pickle-rick">
-        <img alt="Simple CTF" src="/Writeups/img/pickle-rick.png" width="625" height="137" align="right"><br>
+      <a href="https://app.gitbook.com/@pyrusgaming/s/oscp-journey/tryhackme/untitled/rootme" target="_blank">
+        <img alt="Simple CTF" src="/Writeups/img/root-me.png" width="625" height="137" align="right"><br>
+      </a><br><br>
+      <br>
+      <a href="https://app.gitbook.com/@pyrusgaming/s/oscp-journey/tryhackme/untitled/lazyadmin" target="_blank">
+        <img alt="Simple CTF" src="/Writeups/img/lazy-admin.png" width="625" height="137" align="left"><br>
+      </a><br><br>
+      <a href="https://app.gitbook.com/@pyrusgaming/s/oscp-journey/tryhackme/untitled/bounty-hunter" target="_blank">
+        <img alt="Simple CTF" src="/Writeups/img/bounty-hunter.png" width="625" height="137" align="right"><br>
+      </a><br><br>
+      <br>
+      <a href="https://app.gitbook.com/@pyrusgaming/s/oscp-journey/tryhackme/untitled/inclusion" target="_blank">
+        <img alt="Simple CTF" src="/Writeups/img/inclusion.png" width="625" height="137" align="left"><br>
       </a>
       <br>
       <br>
       <br>
       <br>
-      <br>
-      <h1 id="skills"></h1> <br>
-      <p class="lead"></p>
-      <p class="lead"></p>
+      <br><br>
+      <h1 id="hackthebox" style="color:DodgerBlue">HackTheBox</h1><br>
       <br>
       <br>
       <p>Copyright © 2021 Aditya Dindi</p>
