--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </div> 
       <hr>
       <h1 id="work-exp">PROJECTS</h1> <br>
-      <small class="text-muted lead"><strong><a href="/" class="text-decoration-none" target="_blank">Cyber Security Homelab</strong></a></small> <br><br>
+      <small class="text-muted lead"><strong><!--<a href="/" class="text-decoration-none" target="_blank">-->Cyber Security Homelab</strong></a></small> <br><br>
       <small class="text-muted lead"><strong><a href="https://hackersarcade.medium.com/noobs-guide-to-web-application-penetration-testing-e3ae921d57d1" class="text-decoration-none" target="_blank">Web Application Hacking Guide</strong></a></small> <br><br>
       <small class="text-muted lead"><strong><a href="/" class="text-decoration-none" target="_blank">Personal Website</strong></a></small>
       <br>
