--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
       <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
+            <a class="nav-link" href="https://blog.adityadindi.me" target="_blank">BLOG</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="#projects">PROJECTS</a>
           </li>
           <li class="nav-item">
