--- a/WebPages/activities.html
+++ b/WebPages/activities.html
@@ -22,9 +22,6 @@
       <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="/Writeups/tryhackme.html">Writeups</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" href="#tryhackme">TryHackMe</a>
           </li>
           <li class="nav-item">
@@ -49,7 +46,7 @@
       <h2 id="tryhackme">Certificates</h2> <br>
       <img src="/img/THM-PreSecurity.png" alt="Pre-Security" width="600" height="300"> 
       <img src="/img/THM-WebFundamentals.png" alt="Web-Fundamentals" width="600" height="300"> 
-      <img src="/img/THM-AdventOfCyber.png" alt="Advent-Of-Cyber" width="600" height="300"> <br>
+      <img src="/img/THM-AdventOfCyber.png" alt="Advent-Of-Cyber" width="600" height="300"> 
       <br>
       <hr>
       <h1 id="utsa-cyber-range" style="color:DodgerBlue">UTSA Cyber Range </h1><br>
@@ -58,7 +55,9 @@
         <strong> Real-World </strong> Security tools <br>
         <strong> Real-World </strong> Simulated Attacks <br>
       </p>
-      <img src="/img/Cyber-Range-Network.png" alt="Cyber-Range-Network"> 
+      <a href="https://business.utsa.edu/cyber-range/" target="_blank">
+        <img alt="Cyber-Range" src="/img/Cyber-Range-Network.png">
+     </a>
       <br>
       <br>
       <p>
