--- a/WebPages/activities.html
+++ b/WebPages/activities.html
@@ -57,8 +57,15 @@
       </p>
       <a href="https://business.utsa.edu/cyber-range/" target="_blank">
         <img alt="Cyber-Range" src="/img/Cyber-Range-Network.png">
-     </a>
+      </a>
       <br>
+      <br>
+      <h4>Tools Used</h4>
+      <p>
+        <strong>Firewall:</strong> SmartConsole <br>
+        <strong>Security Information Management (SIM):</strong> ArcSight Console <br>
+        <strong>Security Information and Event Management (SIEM):</strong> Zenoss Core <br>
+      </p>
       <br>
       <p>
         The UTSA Cyber Rnage is a virtualized corporate netework with over 60 components including application, database and email servers, as well as workstations and simulated internet segment. The virtual SOC (Security Operation Center) features market-leading security products to provide hands-on experience with the same tools cyher security analysts use on job. 
