--- a/WebPages/activities.html
+++ b/WebPages/activities.html
@@ -71,6 +71,7 @@
         The UTSA Cyber Rnage is a virtualized corporate netework with over 60 components including application, database and email servers, as well as workstations and simulated internet segment. The virtual SOC (Security Operation Center) features market-leading security products to provide hands-on experience with the same tools cyher security analysts use on job. 
       </p>
       <p>
+        Copyright © 2021 The University of Texas at San Antonio
       </p>
       <br>
       <hr>
