--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
       <br>
       <h1 id="skills">MY SKILLS</h1> <br>
       <p class="lead">Web Application Hacking</p>
-      <p class="lead">Network Hacking</p>
+      <p class="lead">Problem-Solving Skills</p>
+      <p class="lead">Working in a Team</p>
+      <p class="lead">Communication Skills</p>
       <br>
       <hr>
       <br>
