--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
             <a class="nav-link" href="https://blog.adityadindi.me" target="_blank">BLOG</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="/WebPages/daily.html" target="_blank">DAILY</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="#projects">PROJECTS</a>
           </li>
           <li class="nav-item">
