--- a/WebPages/daily.html
+++ b/WebPages/daily.html
@@ -40,6 +40,8 @@
         <hr>
         <h1 id="tryhackme" style="color:DodgerBlue">Challenge: 100 Days of Hacking</h1><br>
         <h3 id="tryhackme">Day 1: Oct 10 2021</h3><br>
+        <p>Blogs:<br> 
+          <a href="https://www.hackthebox.eu/blog/how-to-become-a-pentester" target="_blank">How to Become a Pentester</a> : HackTheBox
       </div> 
       <hr>
 
