--- a/WebPages/daily.html
+++ b/WebPages/daily.html
@@ -49,7 +49,7 @@
         <hr>
         <h3>Day 2: Oct 11 2021</h3><br>
         <p><h5>Blogs</h5>
-        <a href="" target="_blank">Jason Writeup</a> : TryHackMe <br><br>
+        <a href="https://musyokaian.medium.com/jason-tryhackme-walkthrough-e37371eae6e0" target="_blank">Jason Writeup</a> : TryHackMe <br><br>
         <h5>Security+</h5>
         <a href="https://www.udemy.com/share/103tA03@TRAMEjFyu5ITX6VmNjXLyyY04MT5f_6QpNtE_p-kA9EaIZi4NtDL6FXbb1QwsqqxMw==/" target="_blank">Security+ 601 Practice Test</a> : Udemy<br><br>
         </p>
