--- a/WebPages/daily.html
+++ b/WebPages/daily.html
@@ -52,11 +52,14 @@
         <a href="https://musyokaian.medium.com/jason-tryhackme-walkthrough-e37371eae6e0" target="_blank">Jason Writeup</a> : TryHackMe <br><br>
         <h5>Security+</h5>
         <a href="https://www.udemy.com/share/103tA03@TRAMEjFyu5ITX6VmNjXLyyY04MT5f_6QpNtE_p-kA9EaIZi4NtDL6FXbb1QwsqqxMw==/" target="_blank">Security+ 601 Practice Test</a> : Udemy<br><br>
-        </p>
+        </p><br>
+        <hr>
+        <p>Copyright © 2021 Aditya Dindi</p>
       </div> 
     </div>
+    
    </center>
-
+   
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
