--- a/WebPages/daily.html
+++ b/WebPages/daily.html
@@ -54,6 +54,18 @@
         <a href="https://www.udemy.com/share/103tA03@TRAMEjFyu5ITX6VmNjXLyyY04MT5f_6QpNtE_p-kA9EaIZi4NtDL6FXbb1QwsqqxMw==/" target="_blank">Security+ 601 Practice Test</a> : Udemy<br><br>
         </p><br>
         <hr>
+        <h3>Day 3: Oct 12 2021</h3><br>
+        <p><h5>Blogs</h5>
+        <a href="https://deetee1.medium.com/ejpt-review-c5b9a1c4c64" target="_blank">eJPT Review</a> : Medium <br><br>
+        <h5>CTSs</h5>
+        <a href="https://overthewire.org/wargames/bandit" target="_blank">Bandit Levels: 1 - 5</a> : OverTheWire Wargames<br><br>
+        <h5>Miscellaneous</h5>
+        <p>Attended University Cyber Security Club’s Alumni Panel</p>
+        <a href="https://www.youtube.com/watch?v=2BOOl8_nwjQ&ab_channel=Exabeam" target="_blank">SOC 101: Real-Time Incident Response Walkthrough</a>: Exabeam Youtube
+
+
+        </p><br>
+        <hr>
         <p>Copyright © 2021 Aditya Dindi</p>
       </div> 
     </div>
