--- a/WebPages/daily.html
+++ b/WebPages/daily.html
@@ -61,9 +61,14 @@
         <a href="https://overthewire.org/wargames/bandit" target="_blank">Bandit Levels: 1 - 5</a> : OverTheWire Wargames<br><br>
         <h5>Miscellaneous</h5>
         <p>Attended University Cyber Security Club’s Alumni Panel</p>
-        <a href="https://www.youtube.com/watch?v=2BOOl8_nwjQ&ab_channel=Exabeam" target="_blank">SOC 101: Real-Time Incident Response Walkthrough</a>: Exabeam Youtube
-
-
+        <a href="https://www.youtube.com/watch?v=2BOOl8_nwjQ&ab_channel=Exabeam" target="_blank">SOC 101: Real-Time Incident Response Walkthrough</a>: Exabeam Youtube <br><br>
+        <hr>
+        <h3>Day 4: Oct 13 2021</h3><br>
+        <p>Attended University Cyber Security Club’s Presentation: Cyber Security Tools</p>
+        <p><h5>CTFs</h5>
+          <a href="https://overthewire.org/wargames/bandit" target="_blank">Bandit Levels: 5 - 10</a> : OverTheWire Wargames<br><br>
+          <a href="https://tryhackme.com/room/passiverecon" target="_blank">Passive Reconnaissance (Tasks 1 - 4)</a> : TryHackMe (Networking Security Module)<br><br>
+        </p>
         </p><br>
         <hr>
         <p>Copyright © 2021 Aditya Dindi</p>
