--- a/WebPages/daily.html
+++ b/WebPages/daily.html
@@ -37,7 +37,7 @@
       <div class="des">
         <img src="/img/pyrus.jpg" class="img-fluid round"> <br><br>
         <h1>Daily</h1> <br><br>
-        <h1 id="tryhackme" style="color:DodgerBlue">Challenge: 100 Days of Hacking</h1><br>
+        <h1 id="tryhackme" style="color:DodgerBlue">100 Days of Hacking Challenge</h1><br>
         <hr>
         <h3>Day 1: Oct 10 2021</h3><br>
         <p><h5>Blogs</h5>
