--- a/WebPages/daily.html
+++ b/WebPages/daily.html
@@ -71,6 +71,13 @@
         </p>
         </p><br>
         <hr>
+        <h3>Day 5: Oct 14 2021</h3><br>
+        <p>
+          Simple Buffer Overflow Challenge <br><br>
+          Python MAC Changer Challenge <br><br>
+          Attended Cyber Security CTF Team meeting <br><br>
+        </p><hr>
+        <h3>Day 6: Oct 15 2021</h3><br>
         <p>Copyright © 2021 Aditya Dindi</p>
       </div> 
     </div>
