--- a/WebPages/daily.html
+++ b/WebPages/daily.html
@@ -78,6 +78,14 @@
           Attended Cyber Security CTF Team meeting <br><br>
         </p><hr>
         <h3>Day 6: Oct 15 2021</h3><br>
+        <p>
+          <a href="https://www.youtube.com/watch?v=FVePzoVIG04&ab_channel=RahulSingh" target="_blank">Cyber Security Beginner Projects</a> : Rahul Singh<br><br>
+          <a href="https://blackninja23.medium.com/cybertalents-scholarship-web-security-ctf-d9f968bf3151" target="_blank">Cybertalents Scholarship Challenges Blog</a><br><br>
+          <a href="https://business.utsa.edu/cyber-range/" target="_blank">UTSA Cyber Range</a> Training Session <br><br>
+          University Cyber Security Club Presentation: MITRE ATT&CK Framework <br><br>
+          <a href="https://whitehoodhacker.net/posts/2021-10-04-the-big-rick" target="_blank">IoT Hacking and Rickrolling My Entire School District </a>: WhiteHoodHacker<br><br>
+        </p>
+        <hr>
         <p>Copyright © 2021 Aditya Dindi</p>
       </div> 
     </div>
