--- a/WebPages/daily.html
+++ b/WebPages/daily.html
@@ -88,7 +88,7 @@
           <a href="https://overthewire.org/wargames/bandit" target="_blank">Bandit Levels: 10 - 15</a> : OverTheWire Wargames<br><br>
           University Cyber Security Club: HackTheBox: Delivery <br><br>
           DeadFaceCTF 2021 <br><br>
-          <a href="https://www.youtube.com/watch?v=-wMU8vmfaYo&t=1561s&ab_channel=BenEater" target="_blank">Why was Facebook down for five hours?</a> : Ben Eater: Youtube <br><br>
+          <a href="https://www.youtube.com/watch?v=-wMU8vmfaYo&t=1561s&ab_channel=BenEater" target="_blank">Why was Facebook down for five hours?</a> : Ben Eater<br><br>
         </p>
         <hr>
         <p>Copyright © 2021 Aditya Dindi</p>
