--- a/WebPages/daily.html
+++ b/WebPages/daily.html
@@ -91,13 +91,14 @@
           <a href="https://www.youtube.com/watch?v=-wMU8vmfaYo&t=1561s&ab_channel=BenEater" target="_blank">Why was Facebook down for five hours?</a> : Ben Eater<br><br>
         </p>
         <hr>
-        <h3>Day 8: Oct 16 2021</h3><br>
+        <h3>Day 8: Oct 17 2021</h3><br>
         <p>
           <a href="https://www.youtube.com/watch?v=y8fmxealw8Y" target="_blank">DeadFace CTF Challenges Walkthrough</a> : CryptoCat <br><br>
           <a href="https://www.youtube.com/watch?v=-wMU8vmfaYo&t=1561s&ab_channel=BenEater" target="_blank">Why was Facebook down for five hours?</a> : Ben Eater<br><br>
           <a href="https://www.youtube.com/watch?v=vI79qT4lcfA&t=54s&ab_channel=Cyberspatial" target="_blank">Why Cyber Security is Hard to Learn (Tips For Sucess)</a> : Cyberspatial <br><br>
           <a href="https://www.youtube.com/watch?v=sFIbPS2pCzk&t=3s&ab_channel=Sandra-Tech%26Lifestyle" target="_blank">Cyber Security Interview Tips</a> : Sandra - Tech & Lifestyle <br><br>
           <a href="https://www.youtube.com/watch?v=KN1oWeGDfQA&ab_channel=Cyberspatial" target="_blank">How North Korea Conducts Cyber Operations</a> : Cyberspatial <br><br>
+          <a href="https://overthewire.org/wargames/bandit" target="_blank">Bandit Levels: 15 - 17</a> : OverTheWire Wargames<br><br>
         </p>
         <p>Copyright © 2021 Aditya Dindi</p>
       </div> 
